Wire up features to internal cluster nodes